# Vulkan-Errata

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.ci/: run-tests  verify-up-to-date
.github/: pull_request_template.md
doc/: README.md  TEMPLATE.md  flipped_present_region_rectangle_origin.md  get_query_result_does_not_wait_for_completion.md  incorrect_dynamic_stencil_write_mask_state.md  point_size_not_clamped.md
errata/: README.md  flipped_present_region_rectangle_origin.yaml  get_query_result_does_not_wait_for_completion.yaml  incorrect_dynamic_stencil_write_mask_state.yaml  point_size_not_clamped.yaml
scripts/: generate.py
src/: vulkan-errata.c  vulkan-errata.cpp  vulkan-errata.h  vulkan-errata.hpp
tests/: cpp-compat.cpp  tests.cpp
